<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:id="@+id/text_about"
        android:textSize="18dp"
        android:text="@string/about_text">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/src"
        android:textAlignment="center"
        android:textSize="18dp"
        android:layout_below="@+id/text_about"
        android:text="@string/src_code">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/link"
        android:textAlignment="center"
        android:textSize="15dp"
        android:layout_below="@+id/src"
        android:text="@string/link_github"
        android:autoLink="web">
    </TextView>
</RelativeLayout>