<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_map">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:width="135dp"
        android:height="80dp"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        />

    <Button
        android:id="@+id/device_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:width="130dp"
        android:height="80dp"
        android:text="@string/device_location" />

    <Button
        android:id="@+id/search_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="25dp"
        android:width="130dp"
        android:height="80dp"
        android:text="@string/search_location" />


</RelativeLayout>